--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -22,10 +22,11 @@ pre {
 }
 
 pre code {
-  padding: 0;
-  font-size: 100%;
-  color: inherit;
-  background-color: transparent;
+  padding: .25em .5em;
+  font-size: 85%;
+  color: #bf616a;
+  background-color: #f9f9f9;
+  border-radius: 3px;
 }
 
 // Pygments via Jekyll
